--- a/pokemon-battle-game/index.html
+++ b/pokemon-battle-game/index.html
@@ -60,6 +60,6 @@
         <script src="https://unpkg.com/pokeapi-js-wrapper/dist/index.js"></script>
         
         <!-- Custom JavaScript -->
-        <!-- <script src="script.js" async defer></script> -->
+        <script src="script.js" async defer></script>
     </body>
 </html>
