--- a/pokemon-battle-game/index.html
+++ b/pokemon-battle-game/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Pokemon Battles</title>
-        <meta name="description" content="">
+        <meta name="description" content="index">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- Bootstrap CSS only -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
@@ -63,6 +63,6 @@
             }
 
         </script>
-        <!-- <script src="script.js" async defer></script> -->
+        <script src="script.js" async defer></script>
     </body>
 </html>
