--- a/pokemon-battle-game/battle.html
+++ b/pokemon-battle-game/battle.html
@@ -52,9 +52,11 @@
         <div class="my-container">
             <div class="row panel-row">
                 <div class="col-3 d-flex justify-content-center flex-wrap">
-                    <div class="player-title" style="width: 16rem;">RHINE</div>
+                    <div class="player-title" style="width: 16rem;"></div>
                     <div class="card player-card" id="player-0-lg" style="width: 16rem;">
-                        <div class="pokemon-img d-flex justify-content-center align-items-center"><img src="" class="my-img" alt="..."></div>
+                        <div class="pokemon-img d-flex justify-content-center align-items-center">
+                            <img src="" class="my-img" alt="..."  data-toggle="tooltip" data-placement="right" data-html="true">
+                        </div>
                         <div class="card-body pt-0">
                             <h5 class="card-title text-center"></h5>
                             <div class="progress">
@@ -75,12 +77,12 @@
                             </div>
                             <div class="col-2 text-second-level move-power" style="text-align: right;"></div>
                           </div>
-                          <button class="btn btn-outline-primary">ATTACK!</button>
+                          <button class="btn btn-outline-primary attack-btn">ATTACK!</button>
                         </div>
                     </div>
 
                     <div class="card player-card d-none" id="player-1-lg" style="width: 16rem;">
-                        <div class="pokemon-img d-flex justify-content-center align-items-center"><img src="" class="my-img" alt="..."></div>
+                        <div class="pokemon-img d-flex justify-content-center align-items-center"><img src="" class="my-img" alt="..."  data-toggle="tooltip" data-placement="right" data-html="true"></div>
                         <div class="card-body pt-0">
                             <h5 class="card-title text-center"></h5>
                             <div class="progress">
@@ -101,12 +103,12 @@
                             </div>
                             <div class="col-2 text-second-level move-power" style="text-align: right;"></div>
                           </div>
-                          <button class="btn btn-outline-primary">ATTACK!</button>
+                          <button class="btn btn-outline-primary attack-btn">ATTACK!</button>
                         </div>
                     </div>
 
                     <div class="card player-card d-none" id="player-2-lg" style="width: 16rem;">
-                        <div class="pokemon-img d-flex justify-content-center align-items-center"><img src="" class="my-img" alt="..."></div>
+                        <div class="pokemon-img d-flex justify-content-center align-items-center"><img src="" class="my-img" alt="..."  data-toggle="tooltip" data-placement="right" data-html="true"></div>
                         <div class="card-body pt-0">
                             <h5 class="card-title text-center"></h5>
                             <div class="progress">
@@ -127,19 +129,19 @@
                             </div>
                             <div class="col-2 text-second-level move-power" style="text-align: right;"></div>
                           </div>
-                          <button class="btn btn-outline-primary">ATTACK!</button>
+                          <button class="btn btn-outline-primary attack-btn">ATTACK!</button>
                         </div>
                     </div>
 
                     <div class="card player-card text-second-level small-card" id="player-1-sm" style="margin-right: 1rem;">
-                    <img src="images/150 - aKrsM5t.png" class="my-img-small">
+                        <img src="" class="my-img-small" alt="..."  data-toggle="tooltip" data-placement="bottom" data-html="true" title="Attack: 50<br>Defense: 50">
                     <div class="card-title-small"></div>
                     <div class="progress prog-small">
                         <div class="progress-bar bar-player" role="progressbar" style="width: 100%;" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
                       </div>
                     </div> 
                     <div class="card player-card text-second-level small-card" id="player-2-sm">
-                        <img src="images/135 - BW3N08O.png" class="my-img-small">
+                        <img src="" class="my-img-small" alt="..."  data-toggle="tooltip" data-placement="bottom" data-html="true" title="Attack: 50<br>Defense: 50">
                         <div class="card-title-small"></div>
                         <div class="progress prog-small">
                             <div class="progress-bar bar-player" role="progressbar" style="width: 100%;" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
@@ -150,8 +152,49 @@
                 </div>
                 <div class="col-6 battleground">
                     <div class="row">
-                        <div class="col-12">
+                        <div class="col-2 d-flex align-items-center" id="info">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="bi bi-question-circle" viewBox="0 0 16 16" data-toggle="modal" data-target="#infoModal">
+                                <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"></path>
+                                <path d="M5.255 5.786a.237.237 0 0 0 .241.247h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286zm1.557 5.763c0 .533.425.927 1.01.927.609 0 1.028-.394 1.028-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94z"></path>
+                            </svg>
+                            <div class="modal fade" id="infoModal" tabindex="-1" role="dialog" aria-labelledby="infoModalLabel" aria-hidden="true">
+                                <div class="modal-dialog modal-dialog-centered" role="document">
+                                  <div class="modal-content">
+                                    <div class="modal-header">
+                                      <h5 class="modal-title" id="infoModalLabel">HOW TO PLAY</h5>
+                                    </div>
+                                    <div class="modal-body">
+                                      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus similique dolorem, doloremque consequuntur quos doloribus omnis eum repellat nostrum vero! Commodi aspernatur aut sint consequuntur aliquam maiores cumque enim optio.
+                                    </div>
+                                    <div class="modal-footer">
+                                      <button type="button" class="btn btn-outline-secondary" data-dismiss="modal">Close</button>
+                                    </div>
+                                  </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-8">
                             <div class="battle-title">BATTLEGROUND</div>
+                        </div>
+                        <div class="col-2 d-flex align-items-center justify-content-end" id="quit">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="bi bi-gear" viewBox="0 0 16 16" data-toggle="modal" data-target="#quitModal">
+                                <path d="M8 4.754a3.246 3.246 0 1 0 0 6.492 3.246 3.246 0 0 0 0-6.492zM5.754 8a2.246 2.246 0 1 1 4.492 0 2.246 2.246 0 0 1-4.492 0z"/>
+                                <path d="M9.796 1.343c-.527-1.79-3.065-1.79-3.592 0l-.094.319a.873.873 0 0 1-1.255.52l-.292-.16c-1.64-.892-3.433.902-2.54 2.541l.159.292a.873.873 0 0 1-.52 1.255l-.319.094c-1.79.527-1.79 3.065 0 3.592l.319.094a.873.873 0 0 1 .52 1.255l-.16.292c-.892 1.64.901 3.434 2.541 2.54l.292-.159a.873.873 0 0 1 1.255.52l.094.319c.527 1.79 3.065 1.79 3.592 0l.094-.319a.873.873 0 0 1 1.255-.52l.292.16c1.64.893 3.434-.902 2.54-2.541l-.159-.292a.873.873 0 0 1 .52-1.255l.319-.094c1.79-.527 1.79-3.065 0-3.592l-.319-.094a.873.873 0 0 1-.52-1.255l.16-.292c.893-1.64-.902-3.433-2.541-2.54l-.292.159a.873.873 0 0 1-1.255-.52l-.094-.319zm-2.633.283c.246-.835 1.428-.835 1.674 0l.094.319a1.873 1.873 0 0 0 2.693 1.115l.291-.16c.764-.415 1.6.42 1.184 1.185l-.159.292a1.873 1.873 0 0 0 1.116 2.692l.318.094c.835.246.835 1.428 0 1.674l-.319.094a1.873 1.873 0 0 0-1.115 2.693l.16.291c.415.764-.42 1.6-1.185 1.184l-.291-.159a1.873 1.873 0 0 0-2.693 1.116l-.094.318c-.246.835-1.428.835-1.674 0l-.094-.319a1.873 1.873 0 0 0-2.692-1.115l-.292.16c-.764.415-1.6-.42-1.184-1.185l.159-.291A1.873 1.873 0 0 0 1.945 8.93l-.319-.094c-.835-.246-.835-1.428 0-1.674l.319-.094A1.873 1.873 0 0 0 3.06 4.377l-.16-.292c-.415-.764.42-1.6 1.185-1.184l.292.159a1.873 1.873 0 0 0 2.692-1.115l.094-.319z"/>
+                              </svg>
+                            <div class="modal fade" id="quitModal" tabindex="-1" role="dialog" aria-labelledby="quitModal" aria-hidden="true">
+                                <div class="modal-dialog modal-dialog-centered" role="document">
+                                  <div class="modal-content">
+                                    <div class="modal-header">
+                                      <h5 class="modal-title" id="infoModalLabel">OPTIONS</h5>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-outline-primary new-game-btn" data-dismiss="modal">New Game</button>
+                                        <button type="button" class="btn btn-outline-warning quit-game-btn" data-dismiss="modal">Quit Game</button>
+                                        <button type="button" class="btn btn-outline-secondary" data-dismiss="modal">Close</button>
+                                    </div>
+                                  </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div id="battle-messages" class="battle-card">
@@ -160,7 +203,7 @@
                 <div class="col-3 d-flex justify-content-center flex-wrap">
                     <div class="opponent-title" style="width: 16rem;">COMPUTER</div>
                     <div class="card opponent-card" id="opponent-0-lg" style="width: 16rem;">
-                        <div class="pokemon-img d-flex justify-content-center align-items-center"><img src="" class="my-img" alt="..."></div>
+                        <div class="pokemon-img d-flex justify-content-center align-items-center"><img src="" class="my-img" alt="..."  data-toggle="tooltip" data-placement="left" data-html="true"></div>
                         <div class="card-body pt-0">
                             <h5 class="card-title text-center"></h5>
                             <div class="progress">
@@ -186,7 +229,7 @@
                     </div>
 
                     <div class="card opponent-card d-none" id="opponent-1-lg" style="width: 16rem;">
-                        <div class="pokemon-img d-flex justify-content-center align-items-center"><img src="" class="my-img" alt="..."></div>
+                        <div class="pokemon-img d-flex justify-content-center align-items-center"><img src="" class="my-img" alt="..."  data-toggle="tooltip" data-placement="right" data-html="true"></div>
                         <div class="card-body pt-0">
                             <h5 class="card-title text-center"></h5>
                             <div class="progress">
@@ -212,7 +255,7 @@
                     </div>
 
                     <div class="card opponent-card d-none" id="opponent-2-lg" style="width: 16rem;">
-                        <div class="pokemon-img d-flex justify-content-center align-items-center"><img src="" class="my-img" alt="..."></div>
+                        <div class="pokemon-img d-flex justify-content-center align-items-center"><img src="" class="my-img" alt="..."  data-toggle="tooltip" data-placement="left" data-html="true"></div>
                         <div class="card-body pt-0">
                             <h5 class="card-title text-center"></h5>
                             <div class="progress">
@@ -238,14 +281,14 @@
                     </div>
 
                     <div class="card opponent-card text-second-level small-card" id="opponent-1-sm" style="margin-right: 1rem;">
-                    <img src="images/150 - aKrsM5t.png" class="my-img-small">
+                    <img src="" class="my-img-small" alt="..."  data-toggle="tooltip" data-placement="bottom" data-html="true" title="Attack: 50<br>Defense: 50">
                     <div class="card-title-small"></div>
                     <div class="progress prog-small">
                         <div class="progress-bar bar-opponent" role="progressbar" style="width: 100%;" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
                       </div>
                     </div> 
                     <div class="card opponent-card text-second-level small-card" id="opponent-2-sm">
-                        <img src="images/135 - BW3N08O.png" class="my-img-small">
+                        <img src="" class="my-img-small" alt="..."  data-toggle="tooltip" data-placement="bottom" data-html="true" title="Attack: 50<br>Defense: 50">
                         <div class="card-title-small"></div>
                         <div class="progress prog-small">
                             <div class="progress-bar bar-opponent" role="progressbar" style="width: 100%;" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
