added credits & explanation notes

--- a/pokemon-battle-game/index.html
+++ b/pokemon-battle-game/index.html
@@ -45,7 +45,11 @@
                   <h5 class="modal-title" id="creditsModalLabel">ABOUT THE GAME</h5>
                 </div>
                 <div class="modal-body">
-                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus similique dolorem, doloremque consequuntur quos doloribus omnis eum repellat nostrum vero! Commodi aspernatur aut sint consequuntur aliquam maiores cumque enim optio.
+                  ver 1.0.0 (Jan 2021)
+                  <br><br>
+                  Made by Rhine Wang with re-ignited love for Pokemon Go (while motivating myself to take longer walks with my pup). 
+                  <br><br>
+                  Special thanks to: <a href="https://pokeapi.co/docs/v2">PokeAPI</a>, <a href="https://github.com/Superviral/Pokemon-GO-App-Assets-and-Images">Superviral</a>for the Pokemon images, and <a href="https://bulbapedia.bulbagarden.net/wiki/Damage">Bulbapedia</a>for insights on the damage calculation formulas.
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-outline-secondary" data-dismiss="modal">Close</button>
